--- a/src/app/modules/common/pages/about-us-page/about-us-page.component.scss
+++ b/src/app/modules/common/pages/about-us-page/about-us-page.component.scss
@@ -1,24 +1,27 @@
 @import "src/styles/mixins";
 
 .about-us {
-    &__left-side{
+    &__left-side {
         position: absolute;
     }
-    &__right-side{
+
+    &__right-side {
         padding-left: 23.9375rem;
-        @include generateStyleByMaxBreakpoint("lg") {
+
+        @include generateStyleByMaxBreakpoint("md") {
             padding-left: 2.5rem;
         }
     }
 
-    &__company{
+    &__company {
         animation: fade-in-right 1s ease-in-out,
     }
+
     &__solution {
         position: relative;
         height: 40rem;
 
-        @include generateStyleByMaxBreakpoint("md") {
+        @include generateStyleByMaxBreakpoint("sm") {
             height: auto;
         }
 
@@ -28,7 +31,7 @@
             border-radius: 30px 0px 0px 30px;
             position: absolute;
 
-            @include generateStyleByMaxBreakpoint("md") {
+            @include generateStyleByMaxBreakpoint("sm") {
                 position: relative;
                 top: 0;
             }
@@ -38,29 +41,34 @@
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
+            min-width: 46.875rem;
+            height: 31.25rem;
+            will-change: transform, animation;
+            animation: slideAnimation 30s infinite linear;
 
-            @include generateStyleByBreakpoint("md") {
-                min-width: 48.875rem;
-                height: 31.25rem;
-                will-change: transform, animation;
-                animation: slideAnimation 30s infinite linear;
+            @keyframes slideAnimation {
+                0% {
+                    transform: translateX(0);
+                }
 
-                @keyframes slideAnimation {
-                    0% {
-                        transform: translateX(0);
-                    }
-
-                    100% {
-                        transform: translateX(-200%);
-                    }
+                100% {
+                    transform: translateX(-200%);
                 }
             }
 
+
             @include generateStyleByMaxBreakpoint("md") {
+                min-width: 37.5rem;
+
+            }
+
+            @include generateStyleByMaxBreakpoint("sm") {
                 position: relative;
-                width: 20.875rem;
+                width: 100%;
+                min-width: 0rem;
                 height: 20.625rem;
-                border-radius: 30px 30px;
+                border-radius: 30px;
+                animation: none;
             }
 
         }
@@ -68,12 +76,13 @@
         &__content {
             position: absolute;
             bottom: 0;
-            width: 16.875rem;
+            max-width: 16.875rem;
+            width:100%;
             border-radius: 0px 30px 0px 0px;
             background: rgba(16, 16, 16, 0.40);
 
-            @include generateStyleByMaxBreakpoint("md") {
-                border-radius: 0px 30px 0px 30px;
+            @include generateStyleByMaxBreakpoint("sm") {
+                border-radius: 0px 30px 30px 30px;
 
             }
 
@@ -84,7 +93,8 @@
     &__logo {
         width: 10.5rem;
         height: 5rem;
-        @include generateStyleByMaxBreakpoint("md") {
+
+        @include generateStyleByMaxBreakpoint("sm") {
             width: 8.125rem;
             height: auto;
         }
