--- a/src/app/modules/production/components/tab-pages/care-tab/care-tab.component.scss
+++ b/src/app/modules/production/components/tab-pages/care-tab/care-tab.component.scss
@@ -4,14 +4,14 @@
 ul.list-disc {
   li {
     position: relative;
-    padding-left: 1.2rem;
+    padding-left: 0.6rem;
 
     &::before {
-      content: '．';
+      content: '•';
       position: absolute;
       top: 0;
       left: 0;
-      font-size: 1.25rem;
+      font-size: 0.5em;
     }
   }
 }
