--- a/src/app/modules/production/components/tab-pages/medicine-tab/medicine-tab.component.scss
+++ b/src/app/modules/production/components/tab-pages/medicine-tab/medicine-tab.component.scss
@@ -48,22 +48,24 @@ ul.list-disc {
         &__detail {
             max-width: 17.8125rem;
             width: 100%;
-            height: 23.75rem;
+            height: 100%;
             border-radius: 1.25rem;
             border: 1px solid map-get($primary-light, 3);
             box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.08);
 
-            @include generateStyleByMaxBreakpoint("lg") {
-                min-width: 13.5rem;
-                height: 27.875rem;
+            @include generateStyleByMaxBreakpoint("md") {
+                max-width: 37.5rem;
+
             }
 
-            @include generateStyleByMaxBreakpoint("md") {
+            @include generateStyleByMaxBreakpoint("sm") {
                 max-width: 20.75rem;
-                min-width: 0rem;
-                height: auto;
-                padding-top: 4rem;
-                padding-bottom: 4rem;
+            }
+
+            &__content {
+                @include generateStyleByMaxBreakpoint("md") {
+                    max-width: 28.5rem;
+                }
             }
         }
 
@@ -131,8 +133,8 @@ ul.list-disc {
         width: 100%;
 
         &__block {
-            max-width: 25rem;
-            height: 31.25rem;
+            max-width: 37.5rem;
+            height: 32.125rem;
             border-radius: 1.25rem;
             box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.08);
             width: 100%;
