--- a/src/app/modules/common/pages/about-us-page/about-us-page.component.scss
+++ b/src/app/modules/common/pages/about-us-page/about-us-page.component.scss
@@ -77,7 +77,7 @@
             position: absolute;
             bottom: 0;
             max-width: 16.875rem;
-            width:100%;
+            width: 100%;
             border-radius: 0px 30px 0px 0px;
             background: rgba(16, 16, 16, 0.40);
 
@@ -91,12 +91,11 @@
     }
 
     &__logo {
-        width: 10.5rem;
-        height: 5rem;
-
+        max-width: 10.5rem;
+        height: 100%;
+        width:100%;
         @include generateStyleByMaxBreakpoint("sm") {
-            width: 8.125rem;
-            height: auto;
+            max-width: 8.125rem;
         }
     }
 }
