feat: add video resize and reload different src logic

--- a/src/app/modules/common/pages/home-page/home-page.component.html
+++ b/src/app/modules/common/pages/home-page/home-page.component.html
@@ -1,13 +1,13 @@
 <section>
   <section class="main-img-container position-relative">
-    <div class="d-flex main-img-container__gradient-bg">
+    <div class="d-flex justify-content-between main-img-container__gradient-bg">
       <p
         class="main-img-container__syntron-text text-white d-none d-sm-flex justify-content-center align-items-center">
         SYNTRON
       </p>
       <div class="position-relative d-flex">
-        <video class="main-img-container__img" muted autoplay loop>
-          <source src="assets/video/home.mov" type="video/mp4">
+        <video #tVideo class="main-img-container__img" muted autoplay loop>
+          <source [src]="videoSrc" type="video/mp4">
         </video>
         <div class="position-absolute main-img-container__title">
           <h1 class="text-white font-3xl font-sm-4xl">全方位的生活體驗</h1>
