--- a/src/app/modules/common/pages/about-us-page/about-us-page.component.html
+++ b/src/app/modules/common/pages/about-us-page/about-us-page.component.html
@@ -118,7 +118,7 @@
       </div>
       <div class="flex-wrap">
         <div class="row">
-          <div *ngFor="let img of logo_list" class="col-6 col-md-3 col-sm-4">
+          <div *ngFor="let img of logo_list" class="col-6 col-md-3 col-sm-4 pb-10">
             <img
               src="assets/basic/logo/{{ img }}.png"
               alt="img"
