--- a/src/app/modules/common/pages/about-us-page/about-us-page.component.html
+++ b/src/app/modules/common/pages/about-us-page/about-us-page.component.html
@@ -13,7 +13,7 @@
     </app-banner-block>
   </section>
 
-  <section class="d-flex flex-column flex-lg-row py-18 position-relative">
+  <section class="d-flex flex-column flex-lg-row pt-20 pb-10 position-relative">
     <aside
       #leftSide
       class="d-none d-md-block flex-sm-column about-us__left-side ms-10 ms-md-30"
