--- a/src/app/modules/common/pages/about-us-page/about-us-page.component.html
+++ b/src/app/modules/common/pages/about-us-page/about-us-page.component.html
@@ -13,7 +13,7 @@
     </app-banner-block>
   </section>
 
-  <section class="d-flex flex-column flex-lg-row pt-20 pb-10 position-relative">
+  <section class="d-flex flex-column flex-lg-row py-18 position-relative">
     <aside
       #leftSide
       class="d-none d-md-block flex-sm-column about-us__left-side ms-10 ms-md-30"
@@ -115,18 +115,19 @@
             與我們合作，建立可靠的夥伴關係，讓信任成為您成功的基石。
           </h6>
         </div>
-      </div>
-      <div class="flex-wrap">
-        <div class="row">
-          <div *ngFor="let img of logo_list" class="col-6 col-md-3 col-sm-4 pb-10">
-            <img
-              src="assets/basic/logo/{{ img }}.png"
-              alt="img"
-              class="about-us__logo"
-            />
+        <div class="flex-wrap pt-5">
+          <div class="row">
+            <div *ngFor="let img of logo_list" class="col-6 col-md-3 col-sm-4 pt-10">
+              <img
+                src="assets/basic/logo/{{ img }}.png"
+                alt="img"
+                class="about-us__logo"
+              />
+            </div>
           </div>
         </div>
       </div>
+     
     </section>
   </section>
 </section>
