feat: adjust large container size and fixing response viewport

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   #tContainer
   appResponsiveViewport
   [responseBuffers]="[tHeader]"
-  class="container overflow-y-auto vh-100 overflow-x-hidden px-0"
+  class="container overflow-y-auto overflow-x-hidden px-0"
   id="main"
   (scroll)="this.onMainScroll($event)"
 >
