--- a/src/app/modules/production/components/blocks/afterImage-img-block/afterImage-img-block.component.scss
+++ b/src/app/modules/production/components/blocks/afterImage-img-block/afterImage-img-block.component.scss
@@ -142,6 +142,9 @@
       line-height: 1.375rem;
     }
     ul {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
     margin: 0 20px;
     }
   };
