feat: 重構手機版選單結構

--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header
-  class="component-header bg-white position-absolute top-0 start-0 end-0 z-3 bg-azure container"
+  class="component-header bg-white position-absolute top-0 start-0 end-0 layer-supreme bg-azure container"
 >
   <div
     class="h-100 d-flex justify-content-between align-items-center w-100 component-header__container"
@@ -39,7 +39,6 @@
           </app-borderless-button>
         </li>
       </ul>
-
       <app-menu-icon
         class="d-flex d-md-none cursor-pointer component-header__icon"
         *ngIf="!isMenuOpen"
