--- a/src/app/modules/shared/components/menu-main-button/menu-main-button.component.scss
+++ b/src/app/modules/shared/components/menu-main-button/menu-main-button.component.scss
@@ -7,6 +7,7 @@
   @include generateStyleByBreakpoint("sm") {
     font-size: 1rem !important;
     width: 30rem;
+    max-width: 100%;
   }
 
   &__icon {
