--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -1,3 +1,5 @@
+@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
+
 @font-face {
   font-family: "g5-customize";
   src: local("Noto Sans TC"), local("PingFang SC"), local("Microsoft YaHei");
