--- a/src/app/modules/common/pages/home-page/home-page.component.scss
+++ b/src/app/modules/common/pages/home-page/home-page.component.scss
@@ -255,3 +255,7 @@
     transform: translate(-4880px, 2.5rem);
   }
 }
+
+video::-webkit-media-controls-start-playback-button {
+  display: none;
+}
