--- a/src/app/modules/news-center/pages/news-page/news-page.component.html
+++ b/src/app/modules/news-center/pages/news-page/news-page.component.html
@@ -14,7 +14,7 @@
   </section>
 
   <section class="d-flex flex-column flex-md-row px-8 px-md-30 py-25 news-list">
-    <aside class="d-none d-md-flex flex-md-column">
+    <aside class="d-none tabs">
       <h4 class="mb-4">分類</h4>
       <app-tab-list
         [tabs]="tabs"
