--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -2,13 +2,13 @@
   class="component-header bg-white position-absolute top-0 start-0 end-0 layer-supreme bg-azure container"
 >
   <div
-    class="h-100 d-flex justify-content-between align-items-center w-100 component-header__container"
+    class="h-100 d-flex justify-content-between align-items-center w-100"
   >
     <app-main-logo
       class="h-100 cursor-pointer"
       (click)="navigate('common/home')"
     ></app-main-logo>
-    <div class="d-flex">
+    <div class="d-flex justify-content-end justify-content-md-center component-header__container">
       <ul class="h-100 align-items-center d-none d-md-flex">
         <li>
           <app-borderless-button
