--- a/src/app/modules/common/pages/home-page/home-page.component.html
+++ b/src/app/modules/common/pages/home-page/home-page.component.html
@@ -6,7 +6,7 @@
         SYNTRON
       </p>
       <div class="position-relative d-flex">
-        <video #tVideo class="video-container__video h-100" muted autoplay loop>
+        <video #tVideo class="video-container__video h-100" muted autoplay loop playsinline [controls]="false">
           <source [src]="videoSrc" type="video/mp4">
         </video>
         <div class="position-absolute video-container__title">
