--- a/src/app/modules/news-center/pages/news-page/news-page.component.scss
+++ b/src/app/modules/news-center/pages/news-page/news-page.component.scss
@@ -48,3 +48,10 @@
     }
   }
 }
+
+.tabs {
+  @media (min-width: 1100px) {
+    display: flex !important;
+    flex-direction: column !important;
+  }
+}
